Moved submodules to sub folder

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,6 +1,6 @@
 [submodule "micronucleus"]
-	path = micronucleus
+	path = submodules/micronucleus
 	url = https://github.com/micronucleus/micronucleus
 [submodule "AVR_Stick"]
-	path = AVR_Stick
+	path = submodules/AVR_Stick
 	url = https://github.com/sparkfun/AVR_Stick
