Adds license information
License headers were added to all source files in the
repository and text files containing the detailed
licensing information were added.

--- a/misc/micronucleus/configuration/AVR_Stick/Makefile.inc
+++ b/misc/micronucleus/configuration/AVR_Stick/Makefile.inc
@@ -1,6 +1,6 @@
 # Name: Makefile
 # Project: Micronucleus
-# License: GNU GPL v2 (see License.txt)
+# License: GNU GPL v2 (see LICENSE_GPL.txt)
 
 # Controller type: ATtiny 85 - 16.5 MHz
 # Configuration:   Default
